# pyapp01

./: README.md  pyproject.toml  upload.sh
src/pyapp01/: __init__.py
